# tg-bot-template

./: .env.defaults  .gitignore  Dockerfile  Dockerfile.celery  Dockerfile.flower  README.md  pyproject.toml
.github/workflows/: deploy.yml  linting.yml  test_deploy.yml
alembic/: env.py
docker/: docker-compose-prod.yml  docker-compose-test.yml  docker-compose.yml
src/: cmnds.py  config.py  consts.py  database.py  keyboards.py  main.py  middlewares.py  providers.py  repository.py  router.py  schemas.py  service.py  utils.py
src/bg_tasks/: celery_app.py  celery_task.py  consts.py  schemas.py  utils.py
src/users/: models.py  repository.py  service.py
