[project]
name = "template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "aiogram>=3.22.0",
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "celery>=5.5.3",
    "celery-redbeat>=2.3.3",
    "dishka>=1.6.0",
    "flower>=2.0.1",
    "loguru>=0.7.3",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pytz>=2025.2",
    "sqlalchemy>=2.0.43",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.12.10",
]
